# ag-program-core

./: .env.example  .gitignore  Anchor.toml  INTEGRATION_TESTS.md  JUPITER_TO_FLIPPER_ADAPTER.md  LICENSE  README.md  TESTING.md  TESTING_JUPITER_MOCK.md  package-lock.json  package.json  tsconfig.json
docs/: ACCOUNTS.md  ADAPTERS.md  ARCHITECTURE.md  README.md  (+3 more)
programs/flipper/: Cargo.toml
programs/flipper/src/: adapters.rs  errors.rs  errors_test.rs  lib.rs  state.rs  state_test.rs
programs/flipper/src/adapters/: dex_adapter.rs  dex_adapter_test.rs  meteora.rs  mod.rs  raydium.rs  whirlpool.rs
programs/flipper/src/adapters/adapter_connector_module/: mod.rs
programs/flipper/src/instructions/: configure_registry.rs  mod.rs  route.rs
programs/flipper/src/instructions/adapter_module/: mod.rs
programs/flipper/src/instructions/adapter_registry_module/: adapter_registry_test.rs  mod.rs
programs/flipper/src/instructions/limit_orders_module/: limit_orders_test.rs  mod.rs
programs/flipper/src/instructions/route_executor_module/: mod.rs
programs/flipper/src/instructions/route_validator_module/: mod.rs  route_validator_test.rs
programs/flipper/src/instructions/shared_limit_orders_module/: mod.rs
programs/flipper/src/instructions/shared_route_module/: mod.rs
programs/flipper/src/instructions/swap_processor/: mod.rs
programs/flipper/src/instructions/swap_processor_module/: LIFETIME_SPEC.md  mod.rs
programs/flipper/src/instructions/vault_manager_module/: mod.rs  vault_manager_test.rs
programs/mock_jupiter/: Cargo.toml
programs/mock_jupiter/src/: lib.rs
(+93 files in other folders)
