[package]
name = "flipper"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "flipper"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
anchor-lang = { version = "0.31.1", features = ["event-cpi"] }
anchor-spl = "0.31.0"
anchor-gen = "0.4.1"

[dev-dependencies]
solana-program-test = "2.3.6"
tokio = { version = "1.38.0", features = ["macros", "rt"] }
