[package]
name = "mock_jupiter"
version = "0.1.0"
description = "Mock Jupiter program for testing Jupiter CPI integration"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mock_jupiter"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.0"
